added checkbox to delete all data before importing a zipped backup, on Admin page
